added some fields in  course name,course type,vehicle category pages

--- a/src/index.scss
+++ b/src/index.scss
@@ -131,3 +131,7 @@
 ::-webkit-scrollbar-thumb:window-inactive {
 background:#c1c1c1;
 }
+.btn.btn-success{
+  background-color: #CC0001 !important;
+  border-color: #CC0001 !important;
+}
