--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@
 @import "./_metronic/_assets/sass/themes/layout/header/menu/light.scss";
 @import "./_metronic/_assets/sass/themes/layout/brand/dark.scss";
 @import "./_metronic/_assets/sass/themes/layout/aside/dark.scss";
+@import url("https://cdn.syncfusion.com/ej2/material.css");
 
 // Header themes
 // Light
