--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -181,3 +181,40 @@ body {
 .MuiDialog-root {
 	z-index: 999 !important;
 }
+
+
+
+
+.honda-logo-center-alignment-page {
+	height: calc(100vh - 249px);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	img {
+		width: 320px;
+	}
+}
+
+
+.honda-container {
+	max-width: 1280px;
+	padding: 0 20px;
+	margin: 0 auto;
+	.honda-text-grid {
+		display: grid;
+		grid-template-columns: repeat(3 , 1fr);
+		gap: 20px 30px;
+	}
+	span {
+		font-size: 16px;
+		color: #757575;
+		display: block;
+		padding-bottom: 5px;
+	}
+	p {
+		font-size: 14px;
+		color: #323232;
+		margin-bottom: 0;
+		margin: 0;
+	}
+}
