--- a/src/_metronic/components/User/User.scss
+++ b/src/_metronic/components/User/User.scss
@@ -783,3 +783,20 @@ $icon-background: rgba(204, 0, 1, 0.18);
         }
     }
 }
+
+.btn-succes {
+    background-color: rgb(204, 0, 1) !important;
+    border-radius: 6px !important;
+    border: 1px solid rgb(255, 255, 255) !important;
+    display: inline-block !important;
+    cursor: pointer !important;
+    color: rgb(255, 255, 255) !important;
+    font-size: 12px !important;
+    padding: 10px 18px !important;
+    margin-top: 30px !important;
+    text-decoration: none !important;
+}
+
+.honda-container-height {
+    height: calc(100vh - 190px);
+}
