--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,7 @@
 //@import "./_metronic/_assets/sass/themes/layout/header/base/light.scss";
 // Dark
 // @import "./_metronic/_assets/sass/themes/layout/header/base/dark.scss";
-  
+
 // Header Menu themes
 // Light
 //@import "./_metronic/_assets/sass/themes/layout/header/menu/light.scss";
@@ -46,20 +46,19 @@
 .example-highlight > pre {
   background: none transparent !important;
   margin: 0 !important;
-  padding-top: 0.5rem; 
-  code { 
-      overflow-y: auto;
-      display: block;
+  padding-top: 0.5rem;
+  code {
+    overflow-y: auto;
+    display: block;
 
-      span {
-        background: none transparent !important;
-      }
+    span {
+      background: none transparent !important;
+    }
   }
 }
 
 .json > pre {
   background: none #fff !important;
-
 }
 
 .example-code > .json {
@@ -79,12 +78,12 @@
 .react-bootstrap-table {
   th {
     outline: none;
-   
-    &.sortable {  
+
+    &.sortable {
       .svg-icon-sort {
         opacity: 0;
       }
-  
+
       &:hover {
         cursor: pointer;
 
@@ -92,12 +91,12 @@
           opacity: 1;
         }
       }
-    }    
+    }
   }
 
   .table.table-head-custom thead tr {
     .sortable-active {
-        color: $primary !important;
+      color: $primary !important;
     }
   }
 }
@@ -106,20 +105,17 @@
   cursor: default !important;
 }
 
-
 /* Let's get this party started */
 ::-webkit-scrollbar {
   width: 5px;
-  height:8px
-  }
-
+  height: 8px;
+}
 
 /* Track */
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-border-radius: 10px;
   border-radius: 10px;
-
 }
 
 /* Handle */
@@ -130,9 +126,26 @@
   background: #c1c1c1;
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-background:#c1c1c1;
+  background: #c1c1c1;
 }
-.btn.btn-success{
-  background-color: #CC0001 !important;
-  border-color: #CC0001 !important;
+.btn.btn-success {
+  background-color: #cc0001 !important;
+  border-color: #cc0001 !important;
+}
+.widthfixed {
+  button {
+    width: 100px !important;
+  }
+}
+.titles {
+  font-weight: 800 !important;
+  font-size: 18px !important;
+}
+img.cmsImage {
+  height: 400px !important;
+  width: 400px !important;
+  object-fit: cover !important;
+}
+.cms-des {
+  font-size: 14px !important;
 }
