button issue fixed

--- a/src/index.scss
+++ b/src/index.scss
@@ -152,3 +152,9 @@ img.cmsImage {
 .star-color {
   color: #cc0001 !important;
 }
+.btn-login {
+  background-color: #cc0001 !important;
+  height: 40px !important;
+  line-height: 10px !important;
+  border-color: #cc0001 !important;
+}
