--- a/src/index.scss
+++ b/src/index.scss
@@ -158,3 +158,6 @@ img.cmsImage {
   line-height: 10px !important;
   border-color: #cc0001 !important;
 }
+.mr-3 {
+  margin-right: 20px !important;
+}
