take test page added

--- a/src/index.scss
+++ b/src/index.scss
@@ -149,6 +149,10 @@ img.cmsImage {
 .cms-des {
   font-size: 14px !important;
 }
+.symbol .symbol-label {
+  width: max-content !important;
+  padding: 10px 20px !important;
+}
 .star-color {
   color: #cc0001 !important;
 }
