--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -396,3 +396,22 @@ button {
 		padding: 10px 20px;
 	}
 }
+
+.questionGrid12121 {
+	display: grid;
+	grid-template-columns: repeat(1 , 1fr);
+	gap: 20px;
+	justify-content: space-between;
+	.questionGridItems {
+		border: 1px solid #d0d0d0;
+		padding: 15px;
+		border-radius: 4px;
+		img {
+			margin: 20px 0;
+			width: 300px;
+			height: 160px;
+			object-fit: cover;
+			border-radius: 4px;
+		}
+	}
+}
