--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -199,6 +199,14 @@ body {
 	display: grid;
 	grid-template-columns: repeat(1 , 1fr);
 	gap: 20px 30px;
+	img.images{
+		height: 400px !important;
+		width: 400px !important;
+	}
+	video{
+		width: 400px !important;
+		height: 400px !important;
+	}
 }
 .honda-container {
 	max-width: 1280px;
@@ -325,6 +333,7 @@ button {
 		line-height: 40px;
 		text-align: center;
 	}
+	
 }
 
 .other-information-child-text-style1 {
@@ -352,7 +361,7 @@ button {
 			img {
 				width: 100%;
 				height: 250px;
-				object-fit: cover;
+				
 			}
 
 		}
@@ -382,7 +391,7 @@ button {
 			img {
 				width: 100%;
 				height: 250px;
-				object-fit: cover;
+				
 			}
 
 		}
@@ -412,7 +421,7 @@ button {
 			margin: 20px 0;
 			width: 300px;
 			height: 160px;
-			object-fit: cover;
+			
 			border-radius: 4px;
 		}
 	}
