--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -273,7 +273,7 @@ button {
 }
 
 .take-test-box {
-	width: 500px;
+	width: 100%;
 	background-color: #fff;
 	box-shadow: 0 0 40px 0 #0000001a;
 	border: 1px solid #d0d0d0;
