--- a/src/_metronic/components/PaymentForm/payment.scss
+++ b/src/_metronic/components/PaymentForm/payment.scss
@@ -2,8 +2,8 @@
     height: 45px;
     background-color: red;
     padding: 6px 12px;
-    // color: $white;
-
+    color: #fff;
+font-weight: bold;
     margin: 27px 0 0 0;
     min-width: 120px;
     border-radius: 4px;
