--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -431,6 +431,28 @@ button {
 		}
 	}
 }
+.grid3 {
+	display: grid;
+	grid-template-columns: repeat(3 , 1fr);
+	gap: 20px;
+	font-size: 18px;
+	justify-content: space-between;
+	.questionGridItems {
+		p{
+			font-size: 22px ;
+		}
+		border: 1px solid #d0d0d0;
+		padding: 15px;
+		border-radius: 4px;
+		img {
+			margin: 20px 0;
+			width: 300px;
+			height: 160px;
+			
+			border-radius: 4px;
+		}
+	}
+}
 
 .button-height > button {
 	min-width: 90px;
