--- a/src/_metronic/_assets/sass/style.react.scss
+++ b/src/_metronic/_assets/sass/style.react.scss
@@ -31,7 +31,9 @@
 .w-100 {
   width: 100% !important;
 }
-
+.align-items-center{
+  align-items: center !important;
+}
 .MuiTableCell-alignRight {
   text-align: left !important;
 }
