--- a/src/_metronic/_assets/sass/layout/_main.scss
+++ b/src/_metronic/_assets/sass/layout/_main.scss
@@ -207,6 +207,10 @@ body {
 		width: 400px !important;
 		height: 400px !important;
 	}
+	img{
+		height: 400px !important;
+		width: 400px !important;
+	}
 }
 .honda-container {
 	max-width: 1280px;
