--- a/src/_metronic/_assets/sass/style.react.scss
+++ b/src/_metronic/_assets/sass/style.react.scss
@@ -74,6 +74,10 @@
 
 // 5: Layout
 @import "layout/init";
+.paddingautos{
+  padding-top: 10px;
+  padding-left: 13px;
+}
 
 ////////////////////////////////////////////////////////////////
 ///////////// DO NOT MODIFY ABOVE INCLUDE ORDER ////////////////
