--- a/src/_metronic/_assets/sass/style.react.scss
+++ b/src/_metronic/_assets/sass/style.react.scss
@@ -37,6 +37,9 @@
 .MuiTableCell-alignRight {
   text-align: left !important;
 }
+select.sc-iwjdpV.gKsGGb{
+  min-width: 40px !important
+}
 
 ////////////////////////////////////////////////////////////////
 ///////////// DO NOT MODIFY BELOW INCLUDE ORDER ////////////////
@@ -78,6 +81,7 @@
   padding-top: 10px;
   padding-left: 13px;
 }
+
 
 ////////////////////////////////////////////////////////////////
 ///////////// DO NOT MODIFY ABOVE INCLUDE ORDER ////////////////
