--- a/src/_metronic/components/User/User.scss
+++ b/src/_metronic/components/User/User.scss
@@ -1047,3 +1047,230 @@ img.view {
     width: 100%;
     left: 0;
 }
+
+
+.certificate-box-center-alignment {
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+}
+
+.certificate-box {
+    width: 900px;
+    background-image: url("https://i.ibb.co/nmw8264/IDTR-Certificate-1.png");
+    background-repeat: no-repeat;
+    height: 600px;
+    padding: 60px;
+    background-size: contain;
+}
+
+.sl-no-box-alignment {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.sl-no-box-alignment div label {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 16px;
+    color: #323232;
+
+}
+
+input:focus {
+    outline: none;
+}
+
+.sl-no-box-alignment div input {
+    border: none;
+    border-bottom: 1px solid #010101;
+    font-size: 14px;
+    width: 100px;
+    color: #505050;
+}
+
+
+.header-alignment {
+    display: flex;
+    align-items: center;
+    padding: 10px 0 0 0;
+    justify-content: space-between;
+}
+
+.header-alignment div:last-child img {
+    max-width: 60px;
+}
+
+.header-alignment div:first-child img {
+
+    max-width: 120px;
+}
+
+
+.header-alignment div h1 {
+    padding: 5px 20px;
+    border-radius: 9999px;
+    /* background-color: #cc0001; */
+    font-size: 16px;
+    color: #000;
+    cursor: pointer;
+    width: fit-content;
+    margin: 0 auto;
+    font-weight: 600;
+}
+
+.header-alignment p {
+    font-size: 14px;
+    margin: 10px 0;
+    font-weight: 500;
+    color: #101010;
+    text-align: center;
+}
+
+.header-alignment span {
+    font-size: 12px;
+    text-align: center;
+    color: #010101;
+    font-weight: 500;
+    display: block;
+}
+
+.drivers-certificate-text h2 {
+    font-size: 25px;
+    line-height: 30px;
+    color: #cc0001;
+    font-weight: 600;
+    text-align: center;
+}
+
+.drivers-certificate-text {
+    padding: 10px 0;
+}
+
+.drivers-certificate-text span {
+    font-size: 14px;
+    color: #010101;
+    display: block;
+    text-align: center;
+    font-weight: 500;
+    padding: 0 0 5px 0;
+}
+.drivers-certificate-text p {
+    font-size: 14px;
+    color: #010101;
+    display: block;
+    text-align: center;
+    font-weight: 500;
+}
+
+.first-row-alignment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 0 15px 0;
+}
+
+.sec-row-alignment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.sec-row-alignment div input {
+    width: 150px;
+}
+.three-row-alignment {
+    display: flex;
+    align-items: center;
+    padding: 15px 0;
+    justify-content: space-between;
+}
+
+.three-row-alignment .sl-no-box-alignment:first-child div input {
+    width: 290px;
+}
+.three-row-alignment .sl-no-box-alignment:last-child div input {
+    width: 190px;
+}
+
+.fourth-row-alignment .sl-no-box-alignment:first-child div input {
+    width: 220px;
+}
+.fifth-row-alignment .sl-no-box-alignment:first-child div input {
+    width: 210px;
+}
+
+.fourth-row-alignment {
+    display: flex;
+    align-items: center;
+}
+
+.fifth-row-alignment {
+    display: flex;
+    padding: 15px 0;
+    align-items: center;
+}
+
+.six-row-alignment {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.six-row-alignment .sl-no-box-alignment:first-child div input {
+    width: 178px;
+}
+
+.footer-content-alignment {
+    padding: 20px 0 0 0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-content-alignment .sl-no-box-alignment label {
+    display: block;
+    padding: 5px 0 0 0;
+    text-align: center;
+}
+
+.photographer-printed-class {
+    border: 1px solid #010101;
+    width: 60px;
+    height: 60px;
+}
+
+
+
+.box-title h1 {
+    font-size: 20px;
+    line-height: 30px;
+    color: #cc0001;
+    margin: 0 0 20px 0;
+    font-weight: 600;
+}
+
+.box-title p {
+    font-size: 16px;
+    color: #010101;
+    margin: 0 0 20px 0;
+    font-weight: 600;
+}
+.box-title span{
+    font-size: 16px;
+    color: #010101;
+    font-weight: 600;
+}
+
+.box-title {
+    padding: 0 0 20px 0;
+}
+
+.content-text-style span {
+    font-size: 16px;
+    color: #000;
+    font-weight: 600;
+    display: block;
+}
