--- a/src/_metronic/_assets/sass/style.react.scss
+++ b/src/_metronic/_assets/sass/style.react.scss
@@ -154,6 +154,8 @@ table.new-table-design,
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
   align-items: center;
+  padding: 20px;
+  border: 1px solid;
 }
 
 ////////////////////////////////////////////////////////////////
