--- a/src/_metronic/_assets/sass/style.react.scss
+++ b/src/_metronic/_assets/sass/style.react.scss
@@ -52,10 +52,7 @@ select.sc-iwjdpV.gKsGGb{
 @import "~bootstrap/scss/bootstrap";
 
 // 3: Components
-@import "components/utilities", "components/burger-icon", "components/card",
-  "components/wizard", "components/type", "components/breadcrumb",
-  "components/nav", "components/alert", "components/buttons", "components/code",
-  "components/dropdown", "components/forms", "components/grid",
+@import 
   "components/modal", "components/progress", "components/table",
   "components/popover", "components/tooltip", "components/accordion",
   "components/datatable", "components/checkbox", "components/radio",
